# odata

./: .env  README.md  adapter.py  main.py  metadata.py  pyproject.toml  requirements.txt  service.py  session.py
examples/: README.md  basic_usage.py
sap_ds/: README.md  __init__.py
sap_ds/api/: README.md  __init__.py  __main__.py  gateway.py  models.py
sap_ds/core/: README.md  __init__.py  connection.py  session.py
sap_ds/defense/: README.md  __init__.py  base.py
sap_ds/defense/force_elements/: README.md  __init__.py  client.py  constants.py  graph.py  hierarchy.py  labels.py  readiness.py  subgraph.py  symbol.py  tree.py
sap_ds/odata/: README.md  __init__.py  metadata.py  service.py
tests/: README.md  __init__.py  conftest.py  test_core.py  test_defense.py  test_odata.py
